# big-data-management-project-4

./: .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  chosen_screens.txt  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements-airflow.txt  requirements.txt
dags/: rico_pipeline.py
migrations/: 001_init.sql  002_traceability.sql
tasks/: audit.py  config.py  embed_image.py  embed_text.py  eval.py  extract.py  ingest.py  load.py  notify.py  parse.py  tracing.py
