[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rico-pipeline"
version = "0.1.0"
description = "RICO multimodal pipeline as a production-grade Airflow DAG"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*"]
